[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "graph-rag"
version = "0.1.0"
description = "Graph RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "jupyter",
    "pip",
    "langchain==0.3.*",
    "langchain_ollama==0.2.*",
    # "langchain-core==0.3.*",
    "langchain-community==0.3.*",
    # "langchain-huggingface",
    "langchain-google-vertexai==2.*",
    "pdfplumber",
    "faiss-cpu==1.*",
    # "ragatouille",
    # "openpyxl",
    # "transformers[torch]",
    # "sentence-transformers>=3",
    # "datasets==2.19.*",
    # "transformers==4.41.*",
    # "deepeval",
    "mypy>=1.15.0",
    # "types-pyyaml==6.*",
    # "types-toml==0.10.*",
    "chonkie>=1.2.1",
    "gliner>=0.2.22",
    "pypdf>=6.1.3",
    "matplotlib>=3.10.7",
]

keywords = ["RAG", "Knowledge Graphs"]

authors = [
    { name = "Alexander Vosseler"}
]

[project.optional-dependencies]
notebook = [
  "jupyter",
  "ipykernel",
  "pytest"
]

# [tool.setuptools]
# package-dir = {"" = "src"}

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["llm_eval*"]

[tool.setuptools]
py-modules = ["global_config", "graph_rag"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests"
]
